--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -34,4 +34,14 @@
         android:background="@color/DarkCyan"
         android:onClick="donateToShelter"/>
     
+    <Button 
+        android:id="@+id/for_temp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/donate"
+        android:layout_width="match_parent"
+        android:text="Temp"
+        android:layout_marginTop="30dp"
+        android:background="@color/DarkCyan"
+        android:onClick="onTemp"/>
+    
 </RelativeLayout>
